--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
+    "react-toastify": "^10.0.6",
     "redux": "^5.0.1",
+    "sonner": "^1.7.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
